primeras 7 hojas del contenido

--- a/unidad1.html
+++ b/unidad1.html
@@ -78,7 +78,7 @@
                         class="material-icons">arrow_back</i></a>
                 <a class="brand-logo titleUnity white-text">Unidad 1&nbsp;&nbsp;
                     <span class="border1 textoStandar titleUnityColorUnit1">
-                        Título de la unidad 1
+                        Aspectos generales de un proyecto y el análisis del entorno
                     </span>
                 </a>
                 <!--Barra de progreso de lectura en modo computadora-->
@@ -134,28 +134,43 @@
                                             </a>
                                             <a contador="2"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit1 mainSectionMenu leftBorderUnit1">
-                                                1.1 La empresa
+                                                1.1 Proyectos 
                                             </a>
                                             <a contador="3"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit1 secondarySectionMenu leftBorderSecondaryUnit1">
-                                                1.1.1 Constitución jurídica
+                                                1.1.1 Clasificación 
                                             </a>
                                             <a contador="4"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit1 secondarySectionMenu leftBorderSecondaryUnit1">
-                                                1.1.2 El área financiera en la estructura organizacional
+                                                1.1.2 Proyecto informático
                                             </a>
                                             <a contador="5"
-                                                class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit1 mainSectionMenu leftBorderUnit1">
-                                                1.2 Función y objetivo de las finanzas empresariales
+                                                class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit1 secondarySectionMenu leftBorderSecondaryUnit1">
+                                                1.1.3 Elementos de un proyecto
                                             </a>
                                             <a contador="6"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit1 mainSectionMenu leftBorderUnit1">
-                                                1.3 Las finanzas empresariales y su relación con otras disciplinas
+                                                1.2 Ciclo de vida de los proyectos y del software 
                                             </a>
                                             <a contador="7"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit1 mainSectionMenu leftBorderUnit1">
-                                                1.4 Factores del micro y macro ambiente que impactan a la empresa y
-                                                a sus finanzas
+                                                1.3 Formulación de un proyecto informático
+                                            </a>
+                                            <a contador="8"
+                                                class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit1 secondarySectionMenu leftBorderSecondaryUnit1">
+                                                1.3.1 Planteamiento del problema y técnicas de análisis
+                                            </a>
+                                            <a contador="9"
+                                                class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit1 secondarySectionMenu leftBorderSecondaryUnit1">
+                                                1.3.2 Antecedentes y situación actual 
+                                            </a>
+                                            <a contador="10"
+                                                class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit1 secondarySectionMenu leftBorderSecondaryUnit1">
+                                                1.3.3 Identificación y selección de alternativas
+                                            </a>
+                                            <a contador="11"
+                                                class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit1 mainSectionMenu leftBorderUnit1">
+                                                1.4	Gestión de la integración del proyecto informático
                                             </a>
                                         </div>
                                     </li>
@@ -168,17 +183,17 @@
                                     <i contador="" class="deskOption material-icons clbktx">library_books</i>
                                     <p contador="" class="deskOption clbktx">Glosario</p>
                                 </a>
-                                <a contador="8"
+                                <a contador="12"
                                     class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
                                     id="a3tutorialButton">
-                                    <i contador="8" class="deskOption material-icons clbktx">auto_stories</i>
-                                    <p contador="8" class="deskOption clbktx">Material de apoyo</p>
+                                    <i contador="12" class="deskOption material-icons clbktx">auto_stories</i>
+                                    <p contador="12" class="deskOption clbktx">Material de apoyo</p>
                                 </a>
-                                <a contador="9"
+                                <a contador="13"
                                     class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
                                     id="a4tutorialButton">
-                                    <i contador="9" class="deskOption material-icons clbktx">fitness_center</i>
-                                    <p contador="9" class="deskOption clbktx">Actividades de aprendizaje</p>
+                                    <i contador="13" class="deskOption material-icons clbktx">fitness_center</i>
+                                    <p contador="13" class="deskOption clbktx">Actividades de aprendizaje</p>
                                 </a>
                                 <a href="unidad1_evaluacion.html" id="a3tutorialButton">
                                     <div class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
@@ -187,11 +202,11 @@
                                         <p class="deskOption clbktx">Evaluación</p>
                                     </div>
                                 </a>
-                                <a contador="10"
+                                <a contador="14"
                                     class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
                                     id="a5tutorialButton">
-                                    <i contador="10" class="deskOption material-icons clbktx">diversity_2</i>
-                                    <p contador="10" class="deskOption clbktx">Cierre de unidad temática</p>
+                                    <i contador="14" class="deskOption material-icons clbktx">diversity_2</i>
+                                    <p contador="14" class="deskOption clbktx">Cierre de unidad temática</p>
                                 </a>
 
                                 <a contador=""
