Conceptos para repasar listos

--- a/glosario.html
+++ b/glosario.html
@@ -218,6 +218,12 @@
 
     </section>
 
+    <!--Boton para acceder a la página de analítica-->
+    <a href="glosario_repaso.html" data-target="slide-out"
+        class="border5 cl3 shadow2 white-text waves-effect waves-light buttonMenuMobile">
+        <i class="material-icons">style</i>
+    </a>
+
     <!--Inyectamos componente de footer-->
     <section id="footerListener"></section>
 
