Primera parte del repaso de los conceptos del glosario

--- a/glosario.html
+++ b/glosario.html
@@ -60,145 +60,145 @@
         </div>
 
         <div class="browserContainer-conceptsContainer readyContentScreen" id="parentConceptsGlosario">
-            <div class="conceptCard clgreyl1 shadow3 border2">
+            <div identificador_select="u1" class="conceptCard clgreyl1 shadow3 border2">
                 <p class="textoTitulo clbktx">Proyecto</p>
                 <p class="textoStandar clbktx">Es un esfuerzo temporal con un inicio y fin definidos, orientado a la
                     creación de un producto, servicio o resultado único, gestionado mediante procesos y recursos
                     (Project Management Institute [PMI], 2017).</p>
             </div>
-            <div class="conceptCard clgreyl1 shadow3 border2">
+            <div identificador_select="u1" class="conceptCard clgreyl1 shadow3 border2">
                 <p class="textoTitulo clbktx">Valor Agregado</p>
                 <p class="textoStandar clbktx">Diferencia distintiva que proporciona un proyecto en comparación con
                     otros, resolviendo la misma problemática o necesidad, y que contribuye significativamente a su
                     éxito.</p>
             </div>
-            <div class="conceptCard clgreyl1 shadow3 border2">
+            <div identificador_select="u1" class="conceptCard clgreyl1 shadow3 border2">
                 <p class="textoTitulo clbktx">Necesidad Humana</p>
                 <p class="textoStandar clbktx">Requiere una solución inteligente que mejore la calidad de vida, siendo
                     también una oportunidad de negocio, abordada a través de un proyecto (Pressman, 2014).</p>
             </div>
-            <div class="conceptCard clgreyl1 shadow3 border2">
+            <div identificador_select="u1" class="conceptCard clgreyl1 shadow3 border2">
                 <p class="textoTitulo clbktx">Problema</p>
                 <p class="textoStandar clbktx">Situación que genera la necesidad de una solución inteligente,
                     identificada y abordada mediante un proyecto (Schwalbe, 2018).</p>
             </div>
-            <div class="conceptCard clgreyl1 shadow3 border2">
+            <div identificador_select="u1" class="conceptCard clgreyl1 shadow3 border2">
                 <p class="textoTitulo clbktx">Presupuestos</p>
                 <p class="textoStandar clbktx">Limitación de recursos financieros asignados a un proyecto (Kloppenborg, 2019).</p>
             </div>
-            <div class="conceptCard clgreyl1 shadow3 border2">
+            <div identificador_select="u1" class="conceptCard clgreyl1 shadow3 border2">
                 <p class="textoTitulo clbktx">Periodo de Tiempo</p>
                 <p class="textoStandar clbktx">Marco temporal en el cual se ejecuta un proyecto, con un inicio y un final (Kerzner, 2017).</p>
             </div>
-            <div class="conceptCard clgreyl1 shadow3 border2">
+            <div identificador_select="u1" class="conceptCard clgreyl1 shadow3 border2">
                 <p class="textoTitulo clbktx">Reglamentación Legal o Formal</p>
                 <p class="textoStandar clbktx">Normas y regulaciones que guían la ejecución de un proyecto (Schwalbe, 2018).</p>
             </div>
-            <div class="conceptCard clgreyl1 shadow3 border2">
+            <div identificador_select="u1" class="conceptCard clgreyl1 shadow3 border2">
                 <p class="textoTitulo clbktx">Satisfacción del Cliente</p>
                 <p class="textoStandar clbktx">Garantizar que el producto, servicio o resultado cumple con la calidad suficiente para satisfacer al cliente (PMBOK Guide, 2017).</p>
             </div>
-            <div class="conceptCard clgreyl1 shadow3 border2">
+            <div identificador_select="u1" class="conceptCard clgreyl1 shadow3 border2">
                 <p class="textoTitulo clbktx">Clasificación de Proyectos</p>
                 <p class="textoStandar clbktx">La organización de proyectos según criterios específicos, como la procedencia del capital, el propósito estratégico, las causas que lo generan o la relación entre los proyectos entre sí (Kerzner, 2017).</p>
             </div>
-            <div class="conceptCard clgreyl1 shadow3 border2">
+            <div identificador_select="u1" class="conceptCard clgreyl1 shadow3 border2">
                 <p class="textoTitulo clbktx">Proyectos de Inversión</p>
                 <p class="textoStandar clbktx">Se clasifican en privados, públicos o mixtos según la procedencia de su capital (PMBOK Guide, 2017).</p>
             </div>
-            <div class="conceptCard clgreyl1 shadow3 border2">
+            <div identificador_select="u1" class="conceptCard clgreyl1 shadow3 border2">
                 <p class="textoTitulo clbktx">Proyectos según Propósito Estratégico</p>
                 <p class="textoStandar clbktx">Clasificación que considera el cambio tecnológico, el potencial competitivo, el potencial financiero, el crecimiento de mercado, ordenamientos legales y consideraciones sociales como categorías (Kerzner, 2017).</p>
             </div>
-            <div class="conceptCard clgreyl1 shadow3 border2">
+            <div identificador_select="u1" class="conceptCard clgreyl1 shadow3 border2">
                 <p class="textoTitulo clbktx">Relación entre Proyectos</p>
                 <p class="textoStandar clbktx">Clasificación que incluye proyectos mutuamente excluyentes, proyectos independientes y proyectos contingentes o dependientes entre sí (Kerzner, 2017).</p>
             </div>
-            <div class="conceptCard clgreyl1 shadow3 border2">
+            <div identificador_select="u1" class="conceptCard clgreyl1 shadow3 border2">
                 <p class="textoTitulo clbktx">Proyecto Informático</p>
                 <p class="textoStandar clbktx">Sistema de cursos de acción simultáneos y/o secuenciales que involucra personas, hardware, software y comunicaciones, enfocado en obtener resultados deseables sobre un sistema de información (Pressman, 2014).</p>
             </div>
-            <div class="conceptCard clgreyl1 shadow3 border2">
+            <div identificador_select="u1" class="conceptCard clgreyl1 shadow3 border2">
                 <p class="textoTitulo clbktx">Gestión de Proyectos Informáticos</p>
                 <p class="textoStandar clbktx">Coordinación, control, presupuestación y documentación de actividades relacionadas con un proyecto informático, con el objetivo de alcanzar objetivos específicos según requisitos y restricciones (Pressman, 2014).</p>
             </div>
-            <div class="conceptCard clgreyl1 shadow3 border2">
+            <div identificador_select="u1" class="conceptCard clgreyl1 shadow3 border2">
                 <p class="textoTitulo clbktx">Elementos de un Proyecto Informático</p>
                 <p class="textoStandar clbktx">Componentes fundamentales necesarios para el desarrollo exitoso de un proyecto informático, incluyendo recursos tecnológicos, humanos y financieros (Pressman, 2014).</p>
             </div>
-            <div class="conceptCard clgreyl1 shadow3 border2">
+            <div identificador_select="u1" class="conceptCard clgreyl1 shadow3 border2">
                 <p class="textoTitulo clbktx">Ciclo de Vida del Proyecto</p>
                 <p class="textoStandar clbktx">División del proyecto en fases que conectan el inicio con el fin, permitiendo identificar, administrar y planificar recursos necesarios para alcanzar el objetivo (PMBOK Guide, 2017).</p>
             </div>
-            <div class="conceptCard clgreyl1 shadow3 border2">
+            <div identificador_select="u1" class="conceptCard clgreyl1 shadow3 border2">
                 <p class="textoTitulo clbktx">Fases del Proyecto de Software</p>
                 <p class="textoStandar clbktx">Etapas del desarrollo del proyecto de software, como inicio, proceso de desarrollo y producto final, que pueden subdividirse en etapas adicionales según el tamaño, complejidad y restricciones del presupuesto (Pressman, 2014).</p>
             </div>
-            <div class="conceptCard clgreyl1 shadow3 border2">
+            <div identificador_select="u1" class="conceptCard clgreyl1 shadow3 border2">
                 <p class="textoTitulo clbktx">Formulación del Proyecto</p>
                 <p class="textoStandar clbktx">Procedimiento para recopilar información orientada a abordar una problemática planteada y satisfacer una necesidad humana en el contexto de un proyecto informático (Schwalbe, 2018).</p>
             </div>
-            <div class="conceptCard clgreyl1 shadow3 border2">
+            <div identificador_select="u1" class="conceptCard clgreyl1 shadow3 border2">
                 <p class="textoTitulo clbktx">Desarrollo del Sistema</p>
                 <p class="textoStandar clbktx">Conjunto de actividades dedicadas a la creación, diseño, despliegue y compatibilidad de software en el marco del desarrollo de un proyecto informático (Pressman, 2014).</p>
             </div>
-            <div class="conceptCard clgreyl1 shadow3 border2">
+            <div identificador_select="u1" class="conceptCard clgreyl1 shadow3 border2">
                 <p class="textoTitulo clbktx">Evaluación Financiera del Proyecto</p>
                 <p class="textoStandar clbktx">Análisis que mide la rentabilidad económica de un proyecto, considerando montos de inversión, costos y gastos asociados, con el objetivo de tomar decisiones informadas (Kerzner, 2017).</p>
             </div>
-            <div class="conceptCard clgreyl1 shadow3 border2">
+            <div identificador_select="u1" class="conceptCard clgreyl1 shadow3 border2">
                 <p class="textoTitulo clbktx">Fase de Planificación</p>
                 <p class="textoStandar clbktx">Etapa inicial del proyecto donde se valoran las necesidades, se establecen los objetivos, se realiza un estudio de viabilidad, se analizan riesgos y se planifican las siguientes fases (Schwalbe, 2018).</p>
             </div>
-            <div class="conceptCard clgreyl1 shadow3 border2">
+            <div identificador_select="u1" class="conceptCard clgreyl1 shadow3 border2">
                 <p class="textoTitulo clbktx">Estudio de Viabilidad</p>
                 <p class="textoStandar clbktx">Evaluación de aspectos técnicos, financieros y legales para determinar si el proyecto puede realizarse en tiempo y con los recursos disponibles (Kerzner, 2017).</p>
             </div>
-            <div class="conceptCard clgreyl1 shadow3 border2">
+            <div identificador_select="u1" class="conceptCard clgreyl1 shadow3 border2">
                 <p class="textoTitulo clbktx">Análisis de Riesgos</p>
                 <p class="textoStandar clbktx">Identificación y evaluación de posibles contratiempos en el proyecto, con la previsión de alternativas de solución (Schwalbe, 2018).</p>
             </div>
-            <div class="conceptCard clgreyl1 shadow3 border2">
+            <div identificador_select="u1" class="conceptCard clgreyl1 shadow3 border2">
                 <p class="textoTitulo clbktx">Planificación del Proyecto</p>
                 <p class="textoStandar clbktx">Desarrollo de un plan detallado para cada fase del proyecto, asegurando el éxito en la realización de actividades y tareas (Kerzner, 2017).</p>
             </div>
-            <div class="conceptCard clgreyl1 shadow3 border2">
+            <div identificador_select="u1" class="conceptCard clgreyl1 shadow3 border2">
                 <p class="textoTitulo clbktx">Fase de Análisis</p>
                 <p class="textoStandar clbktx">Etapa centrada en definir funciones y características específicas del software, asignar recursos y estimar costos para el desarrollo del proyecto (Pressman, 2014).</p>
             </div>
-            <div class="conceptCard clgreyl1 shadow3 border2">
+            <div identificador_select="u1" class="conceptCard clgreyl1 shadow3 border2">
                 <p class="textoTitulo clbktx">Asignación de Recursos</p>
                 <p class="textoStandar clbktx">Determinación de los recursos necesarios para cada fase del proyecto y la asignación formal de responsabilidades para cada tarea (Kloppenborg, 2019).</p>
             </div>
-            <div class="conceptCard clgreyl1 shadow3 border2">
+            <div identificador_select="u1" class="conceptCard clgreyl1 shadow3 border2">
                 <p class="textoTitulo clbktx">Estimación de Costos</p>
                 <p class="textoStandar clbktx">Tarea crítica que involucra presupuestar desde el inicio hasta el final, considerando imprevistos que puedan afectar tiempo, alcance y costos (Kerzner, 2017).</p>
             </div>
-            <div class="conceptCard clgreyl1 shadow3 border2">
+            <div identificador_select="u1" class="conceptCard clgreyl1 shadow3 border2">
                 <p class="textoTitulo clbktx">Fase de Diseño y Estructura</p>
                 <p class="textoStandar clbktx">Etapa donde se estudian alternativas, se establece la estructura de la base de datos, la lógica del flujo de datos y el diseño de la interfaz de usuario (Pressman, 2014).</p>
             </div>
-            <div class="conceptCard clgreyl1 shadow3 border2">
+            <div identificador_select="u1" class="conceptCard clgreyl1 shadow3 border2">
                 <p class="textoTitulo clbktx">Estructura de Base de Datos</p>
                 <p class="textoStandar clbktx">Proceso fundamental en el ciclo de vida del software para facilitar la implementación del proyecto y permitir al usuario gestionar información (Pressman, 2014).</p>
             </div>
-            <div class="conceptCard clgreyl1 shadow3 border2">
+            <div identificador_select="u1" class="conceptCard clgreyl1 shadow3 border2">
                 <p class="textoTitulo clbktx">Lógica del Flujo de Datos</p>
                 <p class="textoStandar clbktx">Elaboración de diagramas que trazan el flujo de información del proyecto de forma visual y detallada (Pressman, 2014).</p>
             </div>
-            <div class="conceptCard clgreyl1 shadow3 border2">
+            <div identificador_select="u1" class="conceptCard clgreyl1 shadow3 border2">
                 <p class="textoTitulo clbktx">Interfaz de Usuario</p>
                 <p class="textoStandar clbktx">Diseño de un entorno intuitivo y fácil de usar, clave para el acceso y la navegación eficiente del usuario en el software desarrollado (Pressman, 2014).</p>
             </div>
-            <div class="conceptCard clgreyl1 shadow3 border2">
+            <div identificador_select="u1" class="conceptCard clgreyl1 shadow3 border2">
                 <p class="textoTitulo clbktx">Fase de Desarrollo</p>
                 <p class="textoStandar clbktx">Etapa donde se inicia la tarea de programación, seleccionando el lenguaje de programación adecuado y siguiendo buenas prácticas para escalabilidad (Pressman, 2014).</p>
             </div>
-            <div class="conceptCard clgreyl1 shadow3 border2">
+            <div identificador_select="u1" class="conceptCard clgreyl1 shadow3 border2">
                 <p class="textoTitulo clbktx">Fase de Pruebas</p>
                 <p class="textoStandar clbktx">Etapa posterior al desarrollo donde se realizan pruebas para identificar y corregir errores, asegurando la calidad del software (Kerzner, 2017).</p>
             </div>
-            <div class="conceptCard clgreyl1 shadow3 border2">
+            <div identificador_select="u1" class="conceptCard clgreyl1 shadow3 border2">
                 <p class="textoTitulo clbktx">Fase de Mantenimiento</p>
                 <p class="textoStandar clbktx">Etapa en la que el software está en funcionamiento, se realizan mejoras, se corrigen fallos, y se atienden limitaciones o propuestas para mejorar (Pressman, 2014).</p>
             </div>
