Ajustes en paleta de colores por unidad y arreglo de textos

--- a/unidad1_evaluacion.html
+++ b/unidad1_evaluacion.html
@@ -84,14 +84,14 @@
     <div class="modal fade" id="modalDisclaimer" tabindex="-1" aria-labelledby="modalDisclaimerLabel" aria-hidden="true">
         <div class="modal-dialog">
           <div class="modal-content">
-            <div class="modal-header white-text cl2 border1Sup">
+            <div class="modal-header white-text colorCardTitleContent border1Sup">
               <h1 class="modal-title fs-5" id="modalDisclaimerLabel">Atención!</h1>
             </div>
             <div class="modal-body">
               Estimado usuario para descargar el reporte PDF, debes contestar todas las preguntas.
             </div>
             <div class="modal-footer">
-              <button type="button"  class="waves-effect waves-light btn-large border1 cl4 scale-transition" data-bs-dismiss="modal">Cerrar</button>
+              <button type="button"  class="waves-effect waves-light btn-large border1 colorCardTitleContent scale-transition" data-bs-dismiss="modal">Cerrar</button>
             </div>
           </div>
         </div>
