--- a/polilibro.html
+++ b/polilibro.html
@@ -60,7 +60,7 @@
             <a href="unidad1.html" class="linkContainer" id="a1Link">
                 <div id="a1" class="cardUnit clgreyl1 shadow2 border2">
                     <p class="clbktx textoTitulo">Unidad 1</p>
-                    <p class="clbktx textoStandar">Subtitulo de la unidad</p>
+                    <p class="clbktx textoStandar">Aspectos generales de un proyecto y el análisis del entorno</p>
                 </div>
             </a>
             <a href="unidad2.html" class="linkContainer" id="a2Link">
