--- a/unidad3.html
+++ b/unidad3.html
@@ -371,7 +371,7 @@
 
 
     <!--Boton de tutorial-->
-    <a class="waves-effect waves-light btn-large botonPolilibro border1 cl4 hide-on-med-and-down scale-transition"
+    <a class="waves-effect waves-light btn-large botonPolilibro border1 colorCardTitleContent hide-on-med-and-down scale-transition"
         id="buttonComputerHelp"><i class="material-icons left">help</i>Ayuda</a>
 
 </body>
