Nuevos colores para el boton de ayuda

--- a/lectorArchivos.html
+++ b/lectorArchivos.html
@@ -10,6 +10,18 @@
              <figure class="front" style="background-image: url('https://pixabay.com/get/gb46f858d834c467d012d890214ee584025e70645dce58f87ef359bc4186c324cf80799862710eed4631eaf0464a6a3c6_1280.jpg');"></figure>
          </div>
          <div class="right">
+            <figure class="back" style="background-image: url('img/escom_backgrounds.jpg');"></figure>
+            <figure class="front" style="background-image: url('https://pixabay.com/get/gb46f858d834c467d012d890214ee584025e70645dce58f87ef359bc4186c324cf80799862710eed4631eaf0464a6a3c6_1280.jpg');"></figure>
+        </div>
+        <div class="right">
+            <figure class="back" style="background-image: url('img/escom_backgrounds.jpg');"></figure>
+            <figure class="front" style="background-image: url('https://pixabay.com/get/gb46f858d834c467d012d890214ee584025e70645dce58f87ef359bc4186c324cf80799862710eed4631eaf0464a6a3c6_1280.jpg');"></figure>
+        </div>
+        <div class="right">
+            <figure class="back" style="background-image: url('img/escom_backgrounds.jpg');"></figure>
+            <figure class="front" style="background-image: url('https://pixabay.com/get/gb46f858d834c467d012d890214ee584025e70645dce58f87ef359bc4186c324cf80799862710eed4631eaf0464a6a3c6_1280.jpg');"></figure>
+        </div>
+         <div class="right">
              <figure class="back" style="background-image: url('https://pixabay.com/get/gb46f858d834c467d012d890214ee584025e70645dce58f87ef359bc4186c324cf80799862710eed4631eaf0464a6a3c6_1280.jpg');"></figure>
              <figure class="front" style="background-image: url('https://pixabay.com/get/g4df987b5bfa39878c10050859486a03f198027e2212376a2ccf6355644691efde0afe432da7e6644dd54fa12b3454a38_1280.jpg');"></figure>
          </div>
