--- a/unidad1.html
+++ b/unidad1.html
@@ -386,7 +386,7 @@
 
 
     <!--Boton de tutorial-->
-    <a class="waves-effect waves-light btn-large botonPolilibro border1 colorCardTitleContent hide-on-med-and-down scale-transition"
+    <a class="waves-effect waves-light btn-large botonPolilibro border1 colorButtonHelpUnit hide-on-med-and-down scale-transition"
         id="buttonComputerHelp"><i class="material-icons left">help</i>Ayuda</a>
 
 </body>
