--- a/unidad4_evaluacion.html
+++ b/unidad4_evaluacion.html
@@ -295,7 +295,7 @@
     <section id="footerListener"></section>
 
     <!--Boton de tutorial-->
-    <a class="waves-effect waves-light btn-large botonPolilibro border1 cl4 scale-transition"
+    <a class="waves-effect waves-light btn-large botonPolilibro border1 colorButtonHelpUnit scale-transition"
     id="buttonComputerHelp"><i class="material-icons left">help</i>Ayuda</a>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
