Lector diseño terminado

--- a/lectorArchivos.html
+++ b/lectorArchivos.html
@@ -18,8 +18,8 @@
     <div class="demo-block bg-light pt-3 pb-3 overflow-hidden">
         <div class="container mb-3 text-center" id="buttonDemoSelection">
             <div class="btn-group" role="group" aria-label="">
-                <button type="button" class="btn btn-primary" data-dest="html">HTML</button>
-                <button type="button" class="btn btn-secondary" data-dest="canvas">CANVAS</button>
+                <button type="button" class="btn btn-primary" data-dest="html">Versión HTML</button>
+                <button type="button" class="btn btn-secondary" data-dest="canvas">Versión SVG</button>
             </div>
         </div>
 
@@ -30,7 +30,7 @@
                     <div class="stf__block">
                         <div class="page stf__item" style="display: none; z-index: 1;">
                             <div class="page-content">
-                                <h2 class="page-header">Page header - 1</h2>
+                                <h2 class="page-header">Encabezado de la página - 1</h2>
                                 <div class="page-image"
                                     style="background-image: url(https://cdn.pixabay.com/photo/2013/04/03/21/25/cereals-100263__340.jpg)">
                                 </div>
@@ -49,7 +49,7 @@
                         </div>
                         <div class="page stf__item" style="display: none; z-index: 1;">
                             <div class="page-content">
-                                <h2 class="page-header">Page header - 2</h2>
+                                <h2 class="page-header">Encabezado de la página - 2</h2>
                                 <div class="page-image"
                                     style="background-image: url(https://cdn.pixabay.com/photo/2016/01/08/17/06/poppy-1128683__340.jpg)">
                                 </div>
@@ -68,7 +68,7 @@
                         </div>
                         <div class="page stf__item --left --simple" style="display: none;">
                             <div class="page-content">
-                                <h2 class="page-header">Page header - 3</h2>
+                                <h2 class="page-header">Encabezado de la página - 3</h2>
                                 <div class="page-image"
                                     style="background-image: url(https://cdn.pixabay.com/photo/2013/01/27/18/41/meadow-76358__340.jpg)">
                                 </div>
@@ -87,7 +87,7 @@
                         </div>
                         <div class="page stf__item --right --simple" style="display: none;">
                             <div class="page-content">
-                                <h2 class="page-header">Page header - 4</h2>
+                                <h2 class="page-header">Encabezado de la página - 4</h2>
                                 <div class="page-image"
                                     style="background-image: url(https://cdn.pixabay.com/photo/2018/05/04/15/23/poppies-3374193__340.jpg)">
                                 </div>
@@ -107,7 +107,7 @@
                         <div class="page stf__item"
                             style="position: absolute; left: 0px; top: 0px; box-sizing: border-box; display: none; z-index: 1;">
                             <div class="page-content">
-                                <h2 class="page-header">Page header - 5</h2>
+                                <h2 class="page-header">Encabezado de la página - 5</h2>
                                 <div class="page-image"
                                     style="background-image: url(https://cdn.pixabay.com/photo/2018/06/01/16/45/red-3446714__340.jpg)">
                                 </div>
@@ -127,7 +127,7 @@
                         <div class="page stf__item"
                             style="position: absolute; left: 0px; top: 0px; box-sizing: border-box; display: none; z-index: 1;">
                             <div class="page-content">
-                                <h2 class="page-header">Page header - 6</h2>
+                                <h2 class="page-header">Encabezado de la página - 6</h2>
                                 <div class="page-image"
                                     style="background-image: url(https://cdn.pixabay.com/photo/2018/08/03/11/40/poppy-3581709__340.jpg)">
                                 </div>
@@ -147,7 +147,7 @@
                         <div class="page stf__item"
                             style="position: absolute; left: 0px; top: 0px; box-sizing: border-box; display: none; z-index: 1;">
                             <div class="page-content">
-                                <h2 class="page-header">Page header - 7</h2>
+                                <h2 class="page-header">Encabezado de la página - 7</h2>
                                 <div class="page-image"
                                     style="background-image: url(https://cdn.pixabay.com/photo/2019/06/02/11/22/poppy-flower-4246241__340.jpg)">
                                 </div>
@@ -167,7 +167,7 @@
                         <div class="page stf__item"
                             style="position: absolute; left: 0px; top: 0px; box-sizing: border-box; display: none; z-index: 1;">
                             <div class="page-content">
-                                <h2 class="page-header">Page header - 8</h2>
+                                <h2 class="page-header">Encabezado de la página - 8</h2>
                                 <div class="page-image"
                                     style="background-image: url(https://cdn.pixabay.com/photo/2019/06/02/21/18/red-poppy-4247574__340.jpg)">
                                 </div>
@@ -187,7 +187,7 @@
                         <div class="page stf__item --left"
                             style="position: absolute; display: block; height: 739.664px; left: 0px; top: 0.168182px; width: 555px; z-index: 1;">
                             <div class="page-content">
-                                <h2 class="page-header">Page header - 9</h2>
+                                <h2 class="page-header">Encabezado de la página - 9</h2>
                                 <div class="page-image"
                                     style="background-image: url(https://cdn.pixabay.com/photo/2017/03/15/18/41/poppies-2147082__340.jpg)">
                                 </div>
@@ -207,7 +207,7 @@
                         <div class="page stf__item --right"
                             style="position: absolute; display: block; height: 739.664px; left: 555px; top: 0.168182px; width: 555px; z-index: 1;">
                             <div class="page-content">
-                                <h2 class="page-header">Page header - 10</h2>
+                                <h2 class="page-header">Encabezado de la página - 10</h2>
                                 <div class="page-image"
                                     style="background-image: url(https://cdn.pixabay.com/photo/2017/08/03/22/16/poppy-2578514__340.jpg)">
                                 </div>
@@ -237,8 +237,8 @@
         </div>
 
         <div class="container">
-            <div class="text-center mt-3 mb-2">
-                <button type="button" class="btn btn-info btn-sm btn-book-prev">Regresas página</button>
+            <div class="text-center mt-3 mb-2" style="color: aliceblue;">
+                <button type="button" class="btn btn-info btn-sm btn-book-prev">Regresar página</button>
                 [<span class="page-count">10</span> of <span class="page-total">10</span>]
                 <button type="button" class="btn btn-info btn-sm btn-book-next">Siguiente página</button>
             </div>
