Correcciones ortográficas y de ofuscación

--- a/glosario_repaso.html
+++ b/glosario_repaso.html
@@ -34,7 +34,7 @@
     <script defer src="js/loading/loadingGlosario.js"></script>
     <script defer src="js/browserStyle.js"></script>
     <script defer src="js/buscador.js"></script>
-    <script defer src="js/noCopy.js"></script>
+    <script defer src="js/noCop.js"></script>
     <script defer src="js/seleccionadorTarjetasGlosario.js"></script>
 
 </head>
