--- a/unidad2_evaluacion.html
+++ b/unidad2_evaluacion.html
@@ -107,7 +107,7 @@
                         class="material-icons">arrow_back</i></a>
                 <a class="brand-logo titleUnity white-text">Unidad 2&nbsp;&nbsp;
                     <span class="border1 textoStandar titleUnityColorUnit2">
-                        Título de la unidad 2
+                        Innovación y la gestión del mercado
                     </span>
                 </a>
             </div>
