--- a/unidad2.html
+++ b/unidad2.html
@@ -78,7 +78,7 @@
                         class="material-icons">arrow_back</i></a>
                 <a class="brand-logo titleUnity white-text">Unidad 2&nbsp;&nbsp;
                     <span class="border1 textoStandar titleUnityColorUnit2">
-                        Título de la unidad 2
+                        Innovación y la gestión del mercado
                     </span>
                 </a>
                 <!--Barra de progreso de lectura en modo computadora-->
@@ -134,28 +134,35 @@
                                             </a>
                                             <a contador="2"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit2 mainSectionMenu leftBorderUnit2">
-                                                1.1 La empresa
+                                                2.1 Innovación
                                             </a>
                                             <a contador="3"
-                                                class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit2 secondarySectionMenu leftBorderSecondaryUnit2">
-                                                1.1.1 Constitución jurídica
+                                                class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit2 mainSectionMenu leftBorderUnit2">
+                                                2.2 Design thinking metodología de innovación
                                             </a>
                                             <a contador="4"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit2 secondarySectionMenu leftBorderSecondaryUnit2">
-                                                1.1.2 El área financiera en la estructura organizacional
+                                                2.2.1 Empatizar con el usuario y explorar el mercado
                                             </a>
                                             <a contador="5"
-                                                class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit2 mainSectionMenu leftBorderUnit2">
-                                                1.2 Función y objetivo de las finanzas empresariales
+                                                class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit2 secondarySectionMenu leftBorderSecondaryUnit2">
+                                                2.2.2 Definir necesidades del usuario
                                             </a>
                                             <a contador="6"
-                                                class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit2 mainSectionMenu leftBorderUnit2">
-                                                1.3 Las finanzas empresariales y su relación con otras disciplinas
+                                                class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit2 secondarySectionMenu leftBorderSecondaryUnit2">
+                                                2.2.3 Idear con propuesta de valor
                                             </a>
                                             <a contador="7"
+                                                class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit2 secondarySectionMenu leftBorderSecondaryUnit2">
+                                                2.2.4 Prototipar la idea
+                                            </a>
+                                            <a contador="8"
+                                                class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit2 secondarySectionMenu leftBorderSecondaryUnit2">
+                                                2.2.5 Testeo (validar)
+                                            </a>
+                                            <a contador="9"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit2 mainSectionMenu leftBorderUnit2">
-                                                1.4 Factores del micro y macro ambiente que impactan a la empresa y
-                                                a sus finanzas
+                                                2.3 Modelo de negocios Canvas
                                             </a>
                                         </div>
                                     </li>
@@ -168,17 +175,17 @@
                                     <i contador="" class="deskOption material-icons clbktx">library_books</i>
                                     <p contador="" class="deskOption clbktx">Glosario</p>
                                 </a>
-                                <a contador="8"
+                                <a contador="10"
                                     class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
                                     id="a3tutorialButton">
-                                    <i contador="8" class="deskOption material-icons clbktx">auto_stories</i>
-                                    <p contador="8" class="deskOption clbktx">Material de apoyo</p>
+                                    <i contador="10" class="deskOption material-icons clbktx">auto_stories</i>
+                                    <p contador="10" class="deskOption clbktx">Material de apoyo</p>
                                 </a>
-                                <a contador="9"
+                                <a contador="11"
                                     class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
                                     id="a4tutorialButton">
-                                    <i contador="9" class="deskOption material-icons clbktx">fitness_center</i>
-                                    <p contador="9" class="deskOption clbktx">Actividades de aprendizaje</p>
+                                    <i contador="11" class="deskOption material-icons clbktx">fitness_center</i>
+                                    <p contador="11" class="deskOption clbktx">Actividades de aprendizaje</p>
                                 </a>
                                 <a href="unidad2_evaluacion.html" id="a3tutorialButton">
                                     <div class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
@@ -187,11 +194,11 @@
                                         <p class="deskOption clbktx">Evaluación</p>
                                     </div>
                                 </a>
-                                <a contador="10"
+                                <a contador="12"
                                     class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
                                     id="a5tutorialButton">
-                                    <i contador="10" class="deskOption material-icons clbktx">diversity_2</i>
-                                    <p contador="10" class="deskOption clbktx">Cierre de unidad temática</p>
+                                    <i contador="12" class="deskOption material-icons clbktx">diversity_2</i>
+                                    <p contador="12" class="deskOption clbktx">Cierre de unidad temática</p>
                                 </a>
 
                                 <a contador=""
