glosario propuesto unidad 2

--- a/unidad2.html
+++ b/unidad2.html
@@ -171,7 +171,7 @@
 
                                 <a contador=""
                                     class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
-                                    id="a9tutorialButton" href="glosario.html">
+                                    id="a9tutorialButton" href="glosario2.html">
                                     <i contador="" class="deskOption material-icons clbktx">library_books</i>
                                     <p contador="" class="deskOption clbktx">Glosario</p>
                                 </a>
