--- a/glosario2.html
+++ b/glosario2.html
@@ -43,7 +43,7 @@
         <!--Navbar principal-->
         <nav>
             <div class="nav-wrapper cl2">
-                <a href="index.html" data-target="mobile-demo" class="sidenav-trigger show-on-large"><i
+                <a href="unidad2.html" data-target="mobile-demo" class="sidenav-trigger show-on-large"><i
                         class="material-icons">arrow_back</i></a>
                 <a class="brand-logo titleUnity">Glosario</a>
             </div>
