--- a/unidad1.html
+++ b/unidad1.html
@@ -28,7 +28,7 @@
     <script defer src="js/components/footer.js"></script>
 
     <!--Scripts propios-->
-    <script defer src="js/cargaContenidos/refreshContentWhenClickBack.js"></script>
+    <!-- <script defer src="js/cargaContenidos/refreshContentWhenClickBack.js"></script> -->
     <script defer src="js/toggleMenuLateralUnity.js"></script>
     <script defer src="js/menuSticky.js"></script>
     <script defer src="js/collapsible.js"></script>
@@ -107,20 +107,21 @@
                         style="background-color: #42584e;">
                         <section id="lateralUnityMenu" class="lateralUnityMenu clw">
                             <div id="lateralUnityMenuSectionContainer" class="lateralUnityMenuSectionContainer">
+
+
                                 <a contador="0"
-                                    class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2 activeLinkOptionsContentUnit1"
-                                    id="a1tutorialButton">
-                                    <i contador="0" class="deskOption material-icons clbktx">school</i>
-                                    <p contador="0" class="deskOption clbktx">Inicio</p>
-                                </a>
-
-                                <a contador=""
                                     class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
-                                    id="a10tutorialButton" href="manual.html">
-                                    <i contador="" class="deskOption material-icons clbktx">sos</i>
-                                    <p contador="" class="deskOption clbktx">Manual de usuario</p>
+                                    id="a3tutorialButton">
+                                    <i contador="0" class="deskOption material-icons clbktx">extension</i>
+                                    <p contador="0" class="deskOption clbktx">Unidad de competencia</p>
                                 </a>
-
+                                
+                                <a contador="1"
+                                    class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
+                                    id="a3tutorialButton">
+                                    <i contador="1" class="deskOption material-icons clbktx">assessment</i>
+                                    <p contador="1" class="deskOption clbktx">Evaluación de los aprendizajes</p>
+                                </a>
 
 
                                 <ul id="a2tutorialButton" class="collapsible clgreyl2 border1 shadow2">
@@ -128,47 +129,47 @@
                                         <div class="collapsible-header clgreyl2 clbktx"><i
                                                 class="material-icons">local_library</i>Contenidos</div>
                                         <div class="collapsible-body">
-                                            <a contador="1"
+                                            <a contador="2"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit1 mainSectionMenu leftBorderUnit1">
                                                 Introducción
                                             </a>
-                                            <a contador="2"
+                                            <a contador="3"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit1 mainSectionMenu leftBorderUnit1">
                                                 1.1 Proyectos 
                                             </a>
-                                            <a contador="3"
+                                            <a contador="4"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit1 secondarySectionMenu leftBorderSecondaryUnit1">
                                                 1.1.1 Clasificación 
                                             </a>
-                                            <a contador="4"
+                                            <a contador="5"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit1 secondarySectionMenu leftBorderSecondaryUnit1">
                                                 1.1.2 Proyecto informático
                                             </a>
-                                            <a contador="5"
+                                            <a contador="6"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit1 secondarySectionMenu leftBorderSecondaryUnit1">
                                                 1.1.3 Elementos de un proyecto
                                             </a>
-                                            <a contador="6"
+                                            <a contador="7"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit1 mainSectionMenu leftBorderUnit1">
                                                 1.2 Ciclo de vida de los proyectos y del software 
                                             </a>
-                                            <a contador="7"
+                                            <a contador="8"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit1 mainSectionMenu leftBorderUnit1">
                                                 1.3 Formulación de un proyecto informático
                                             </a>
-                                            <a contador="8"
+                                            <a contador="9"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit1 secondarySectionMenu leftBorderSecondaryUnit1">
                                                 1.3.1 Planteamiento del problema y técnicas de análisis
                                             </a>
-                                            <a contador="9"
+                                            <a contador="10"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit1 secondarySectionMenu leftBorderSecondaryUnit1">
                                                 1.3.2 Antecedentes y situación actual 
                                             </a>
-                                            <a contador="10"
+                                            <a contador="11"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit1 secondarySectionMenu leftBorderSecondaryUnit1">
                                                 1.3.3 Identificación y selección de alternativas
                                             </a>
-                                            <a contador="11"
+                                            <a contador="12"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit1 mainSectionMenu leftBorderUnit1">
                                                 1.4	Gestión de la integración del proyecto informático
                                             </a>
@@ -183,17 +184,17 @@
                                     <i contador="" class="deskOption material-icons clbktx">library_books</i>
                                     <p contador="" class="deskOption clbktx">Glosario</p>
                                 </a>
-                                <a contador="12"
-                                    class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
-                                    id="a3tutorialButton">
-                                    <i contador="12" class="deskOption material-icons clbktx">auto_stories</i>
-                                    <p contador="12" class="deskOption clbktx">Material de apoyo</p>
-                                </a>
                                 <a contador="13"
                                     class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
+                                    id="a3tutorialButton">
+                                    <i contador="13" class="deskOption material-icons clbktx">auto_stories</i>
+                                    <p contador="13" class="deskOption clbktx">Material de apoyo</p>
+                                </a>
+                                <a contador="14"
+                                    class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
                                     id="a4tutorialButton">
-                                    <i contador="13" class="deskOption material-icons clbktx">fitness_center</i>
-                                    <p contador="13" class="deskOption clbktx">Actividades de aprendizaje</p>
+                                    <i contador="14" class="deskOption material-icons clbktx">fitness_center</i>
+                                    <p contador="14" class="deskOption clbktx">Actividades de aprendizaje</p>
                                 </a>
                                 <a href="unidad1_evaluacion.html" id="a3tutorialButton">
                                     <div class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
@@ -201,24 +202,6 @@
                                         <i class="deskOption material-icons clbktx">quiz</i>
                                         <p class="deskOption clbktx">Evaluación</p>
                                     </div>
-                                </a>
-                                <a contador="14"
-                                    class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
-                                    id="a5tutorialButton">
-                                    <i contador="14" class="deskOption material-icons clbktx">diversity_2</i>
-                                    <p contador="14" class="deskOption clbktx">Cierre de unidad temática</p>
-                                </a>
-
-                                <a contador=""
-                                    class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
-                                    id="a7tutorialButton" href="referencias.html">
-                                    <i contador="" class="deskOption material-icons clbktx">format_quote</i>
-                                    <p contador="" class="deskOption clbktx">Referencias</p>
-                                </a>
-                                <a class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
-                                    id="a8tutorialButton" href="contacto.html">
-                                    <i contador="" class="deskOption material-icons clbktx">alternate_email</i>
-                                    <p contador="" class="deskOption clbktx">Contacto</p>
                                 </a>
                             </div>
                         </section>
