--- a/unidad2.html
+++ b/unidad2.html
@@ -28,7 +28,7 @@
     <script defer src="js/components/footer.js"></script>
 
     <!--Scripts propios-->
-    <script defer src="js/cargaContenidos/refreshContentWhenClickBack.js"></script>
+    <!--<script defer src="js/cargaContenidos/refreshContentWhenClickBack.js"></script>-->
     <script defer src="js/toggleMenuLateralUnity.js"></script>
     <script defer src="js/menuSticky.js"></script>
     <script defer src="js/collapsible.js"></script>
@@ -107,60 +107,59 @@
                         style="background-color: #583b3e;">
                         <section id="lateralUnityMenu" class="lateralUnityMenu clw">
                             <div id="lateralUnityMenuSectionContainer" class="lateralUnityMenuSectionContainer">
+
                                 <a contador="0"
-                                    class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2 activeLinkOptionsContentUnit2"
-                                    id="a1tutorialButton">
-                                    <i contador="0" class="deskOption material-icons clbktx">school</i>
-                                    <p contador="0" class="deskOption clbktx">Inicio</p>
-                                </a>
-
-                                <a contador=""
                                     class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
-                                    id="a10tutorialButton" href="manual.html">
-                                    <i contador="" class="deskOption material-icons clbktx">sos</i>
-                                    <p contador="" class="deskOption clbktx">Manual de usuario</p>
+                                    id="a3tutorialButton">
+                                    <i contador="0" class="deskOption material-icons clbktx">extension</i>
+                                    <p contador="0" class="deskOption clbktx">Unidad de competencia</p>
                                 </a>
-
-
+                                
+                                <a contador="1"
+                                    class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
+                                    id="a3tutorialButton">
+                                    <i contador="1" class="deskOption material-icons clbktx">assessment</i>
+                                    <p contador="1" class="deskOption clbktx">Evaluación de los aprendizajes</p>
+                                </a>
 
                                 <ul id="a2tutorialButton" class="collapsible clgreyl2 border1 shadow2">
                                     <li>
                                         <div class="collapsible-header clgreyl2 clbktx"><i
                                                 class="material-icons">local_library</i>Contenidos</div>
                                         <div class="collapsible-body">
-                                            <a contador="1"
+                                            <a contador="2"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit2 mainSectionMenu leftBorderUnit2">
                                                 Introducción
                                             </a>
-                                            <a contador="2"
+                                            <a contador="3"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit2 mainSectionMenu leftBorderUnit2">
                                                 2.1 Innovación
                                             </a>
-                                            <a contador="3"
+                                            <a contador="4"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit2 mainSectionMenu leftBorderUnit2">
                                                 2.2 Design thinking metodología de innovación
                                             </a>
-                                            <a contador="4"
+                                            <a contador="5"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit2 secondarySectionMenu leftBorderSecondaryUnit2">
                                                 2.2.1 Empatizar con el usuario y explorar el mercado
                                             </a>
-                                            <a contador="5"
+                                            <a contador="6"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit2 secondarySectionMenu leftBorderSecondaryUnit2">
                                                 2.2.2 Definir necesidades del usuario
                                             </a>
-                                            <a contador="6"
+                                            <a contador="7"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit2 secondarySectionMenu leftBorderSecondaryUnit2">
                                                 2.2.3 Idear con propuesta de valor
                                             </a>
-                                            <a contador="7"
+                                            <a contador="8"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit2 secondarySectionMenu leftBorderSecondaryUnit2">
                                                 2.2.4 Prototipar la idea
                                             </a>
-                                            <a contador="8"
+                                            <a contador="9"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit2 secondarySectionMenu leftBorderSecondaryUnit2">
                                                 2.2.5 Testeo (validar)
                                             </a>
-                                            <a contador="9"
+                                            <a contador="10"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit2 mainSectionMenu leftBorderUnit2">
                                                 2.3 Modelo de negocios Canvas
                                             </a>
@@ -175,17 +174,17 @@
                                     <i contador="" class="deskOption material-icons clbktx">library_books</i>
                                     <p contador="" class="deskOption clbktx">Glosario</p>
                                 </a>
-                                <a contador="10"
-                                    class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
-                                    id="a3tutorialButton">
-                                    <i contador="10" class="deskOption material-icons clbktx">auto_stories</i>
-                                    <p contador="10" class="deskOption clbktx">Material de apoyo</p>
-                                </a>
                                 <a contador="11"
                                     class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
+                                    id="a3tutorialButton">
+                                    <i contador="11" class="deskOption material-icons clbktx">auto_stories</i>
+                                    <p contador="11" class="deskOption clbktx">Material de apoyo</p>
+                                </a>
+                                <a contador="12"
+                                    class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
                                     id="a4tutorialButton">
-                                    <i contador="11" class="deskOption material-icons clbktx">fitness_center</i>
-                                    <p contador="11" class="deskOption clbktx">Actividades de aprendizaje</p>
+                                    <i contador="12" class="deskOption material-icons clbktx">fitness_center</i>
+                                    <p contador="12" class="deskOption clbktx">Actividades de aprendizaje</p>
                                 </a>
                                 <a href="unidad2_evaluacion.html" id="a3tutorialButton">
                                     <div class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
@@ -193,24 +192,6 @@
                                         <i class="deskOption material-icons clbktx">quiz</i>
                                         <p class="deskOption clbktx">Evaluación</p>
                                     </div>
-                                </a>
-                                <a contador="12"
-                                    class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
-                                    id="a5tutorialButton">
-                                    <i contador="12" class="deskOption material-icons clbktx">diversity_2</i>
-                                    <p contador="12" class="deskOption clbktx">Cierre de unidad temática</p>
-                                </a>
-
-                                <a contador=""
-                                    class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
-                                    id="a7tutorialButton" href="referencias.html">
-                                    <i contador="" class="deskOption material-icons clbktx">format_quote</i>
-                                    <p contador="" class="deskOption clbktx">Referencias</p>
-                                </a>
-                                <a class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
-                                    id="a8tutorialButton" href="contacto.html">
-                                    <i contador="" class="deskOption material-icons clbktx">alternate_email</i>
-                                    <p contador="" class="deskOption clbktx">Contacto</p>
                                 </a>
                             </div>
                         </section>
